<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/hastoler_regular"
            android:text="@string/register_form"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_big" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_form"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_first_name"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_last_name"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_ph_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_email"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_ph_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_ph_no"
                android:inputType="phone"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_ph_no"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_password"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_terms_and_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_confirm_password"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:hint="@string/terms_and_privacy"
            android:textColorHint="@color/full_white" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_terms_and_privacy"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/rounded_btn"
            android:text="@string/register" />

    </RelativeLayout>

</ScrollView>
