<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:fontFamily="@font/hastoler_regular"
            android:text="@string/login_form"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_big" />

        <ImageView
            android:id="@+id/iv_login_user_profile"
            android:layout_width="@dimen/login_user_profile"
            android:layout_height="@dimen/login_user_profile"
            android:layout_below="@id/tv_login_form"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_medium_3"
            android:background="@drawable/rounded"
            android:padding="20dp"
            android:src="@drawable/login_user" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email_or_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_login_user_profile"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_email_or_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_or_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_email_or_phone"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:textColorHint="@color/accent">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_visibility_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/full_white"
                android:textColorHint="@color/accent" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_cb_and_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_password"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:hint="@string/remember_me"
                android:textColorHint="@color/secondary_text" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/full_white"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_cb_and_fp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:background="@drawable/rounded_btn"
            android:text="@string/login"
            android:textColor="@color/full_black" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_medium_3"
            android:text="(Or)"
            android:textColor="@color/full_white"
            android:textSize="@dimen/text_regular_2x" />

        <LinearLayout
            android:id="@+id/ll_login_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_or"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/btn_facebook"
                android:layout_width="@dimen/social_media_icon"
                android:layout_height="@dimen/social_media_icon"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/btn_twitter"
                android:layout_width="@dimen/social_media_icon"
                android:layout_height="@dimen/social_media_icon"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="1"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/iv_google_plus"
                android:layout_width="@dimen/social_media_icon"
                android:layout_height="@dimen/social_media_icon"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/googleplus" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>
